[gd_scene load_steps=41 format=3 uid="uid://c7tf2uyqb86vx"]

[ext_resource type="Script" path="res://Scripts/BaseUIComponents/SecureTextEdit.gd" id="1_iqm20"]
[ext_resource type="Texture2D" uid="uid://b3n85evynamkw" path="res://Resources/Textures/Bold.svg" id="2_b6ooh"]
[ext_resource type="PackedScene" uid="uid://d2870yealvg0d" path="res://Scenes/ThemePainter.tscn" id="2_jepj1"]
[ext_resource type="SystemFont" uid="uid://cet1proxcxegx" path="res://Resources/Fonts/SystemFontMedium.tres" id="2_w7fei"]
[ext_resource type="Texture2D" uid="uid://bqwhcyfm77k88" path="res://Resources/Textures/Warning.svg" id="3_a8ljg"]
[ext_resource type="Theme" uid="uid://c7vkhqml4gcnr" path="res://Resources/Themes/SmallButton-Light.tres" id="3_f702g"]
[ext_resource type="Texture2D" uid="uid://xn0ar2yw3j2l" path="res://Resources/Textures/Underline.svg" id="3_pxnxc"]
[ext_resource type="Texture2D" uid="uid://shjwycjn81ta" path="res://Resources/Textures/FontSize.svg" id="4_3r0mh"]
[ext_resource type="PackedScene" uid="uid://dfa41l48uuw85" path="res://Scenes/BaseUIComponents/CustomPanelContainer.tscn" id="4_ibb78"]
[ext_resource type="Theme" uid="uid://4wnlucn420o6" path="res://Resources/Themes/ScrollContainer-Light.tres" id="5_gdh5t"]
[ext_resource type="Texture2D" uid="uid://dvcdd0m75q6jg" path="res://Resources/Textures/FontColor.svg" id="5_gxw6d"]
[ext_resource type="Texture2D" uid="uid://dxdhuyqqvs4rd" path="res://Resources/Textures/AlignRight.svg" id="6_n2bok"]
[ext_resource type="Texture2D" uid="uid://glv5sj0o5eqx" path="res://Resources/Textures/AlignCenter.svg" id="7_6e646"]
[ext_resource type="Texture2D" uid="uid://dyqsnawlnq1p2" path="res://Resources/Textures/AlignLeft.svg" id="8_d2swd"]
[ext_resource type="Texture2D" uid="uid://3la08yt0bhd8" path="res://Resources/Textures/Code.svg" id="9_fdheq"]
[ext_resource type="PackedScene" uid="uid://d1a4son7e2wes" path="res://Scenes/Forum/ContentLabel.tscn" id="11_ov7oj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j464s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c5o0x"]
bg_color = Color(0.952941, 0.952941, 0.952941, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.898039, 0.898039, 0.898039, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3444"]
bg_color = Color(0.984314, 0.984314, 0.984314, 1)
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.898039, 0.898039, 0.898039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8i76"]
bg_color = Color(0.952941, 0.952941, 0.952941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_16077"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6nhk7"]
content_margin_left = 8.0
bg_color = Color(1, 1, 1, 1)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bblfe"]
bg_color = Color(0.952941, 0.952941, 0.952941, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.898039, 0.898039, 0.898039, 1)
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l4kul"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pi3hc"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nogh"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gxfc8"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5b4nd"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h0ahw"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fsqf"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fi7by"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vdhp"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgdyh"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfjsv"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wyldg"]
bg_color = Color(4.62055e-06, 0.425628, 0.791154, 1)
border_width_bottom = 1
border_color = Color(0, 0.243137, 0.45098, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_ggvk4"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/fonts/font = ExtResource("2_w7fei")
Button/styles/disabled = SubResource("StyleBoxFlat_pi3hc")
Button/styles/disabled_mirrored = SubResource("StyleBoxFlat_2nogh")
Button/styles/focus = SubResource("StyleBoxFlat_gxfc8")
Button/styles/hover = SubResource("StyleBoxFlat_5b4nd")
Button/styles/hover_mirrored = SubResource("StyleBoxFlat_h0ahw")
Button/styles/hover_pressed = SubResource("StyleBoxFlat_0fsqf")
Button/styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_fi7by")
Button/styles/normal = SubResource("StyleBoxFlat_3vdhp")
Button/styles/normal_mirrored = SubResource("StyleBoxFlat_rgdyh")
Button/styles/pressed = SubResource("StyleBoxFlat_qfjsv")
Button/styles/pressed_mirrored = SubResource("StyleBoxFlat_wyldg")

[sub_resource type="Animation" id="Animation_jp4hj"]
resource_name = "HideSensitiveWordTag"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/MarginContainer/PanelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/MarginContainer:theme_override_constants/margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [-200, 0]
}

[sub_resource type="Animation" id="Animation_iq77o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/MarginContainer/PanelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/MarginContainer:theme_override_constants/margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8wrt8"]
resource_name = "ShowSensitiveWordTag"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/MarginContainer/PanelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/MarginContainer:theme_override_constants/margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [0, -200]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0tfw"]
_data = {
"HideSensitiveWordTag": SubResource("Animation_jp4hj"),
"RESET": SubResource("Animation_iq77o"),
"ShowSensitiveWordTag": SubResource("Animation_8wrt8")
}

[node name="SecureTextEdit" type="PanelContainer"]
custom_minimum_size = Vector2(210, 66)
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_j464s")
script = ExtResource("1_iqm20")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="ToolsBar" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c5o0x")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/ToolsBar"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer"]
layout_mode = 2

[node name="BoldButton" type="Button" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_f702g")
theme_override_constants/icon_max_width = 32
icon = ExtResource("2_b6ooh")

[node name="ThemePainter" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/BoldButton" instance=ExtResource("2_jepj1")]

[node name="UnderlineButton" type="Button" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_f702g")
theme_override_constants/icon_max_width = 32
icon = ExtResource("3_pxnxc")

[node name="ThemePainter" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/UnderlineButton" instance=ExtResource("2_jepj1")]

[node name="FontSizeButton" type="Button" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_f702g")
theme_override_constants/icon_max_width = 32
icon = ExtResource("4_3r0mh")

[node name="ThemePainter" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/FontSizeButton" instance=ExtResource("2_jepj1")]

[node name="FontColorButton" type="Button" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_f702g")
theme_override_constants/icon_max_width = 32
icon = ExtResource("5_gxw6d")

[node name="ThemePainter" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/FontColorButton" instance=ExtResource("2_jepj1")]

[node name="AlignRightButton" type="Button" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_f702g")
theme_override_constants/icon_max_width = 32
icon = ExtResource("6_n2bok")

[node name="ThemePainter" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/AlignRightButton" instance=ExtResource("2_jepj1")]

[node name="AlignCenterButton" type="Button" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_f702g")
theme_override_constants/icon_max_width = 32
icon = ExtResource("7_6e646")

[node name="ThemePainter" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/AlignCenterButton" instance=ExtResource("2_jepj1")]

[node name="AlignLeftButton" type="Button" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_f702g")
theme_override_constants/icon_max_width = 32
icon = ExtResource("8_d2swd")

[node name="ThemePainter" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/AlignLeftButton" instance=ExtResource("2_jepj1")]

[node name="CodeButton" type="Button" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_f702g")
theme_override_constants/icon_max_width = 32
icon = ExtResource("9_fdheq")

[node name="ThemePainter" parent="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/CodeButton" instance=ExtResource("2_jepj1")]

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2" groups=["local_theme-normal"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("5_gdh5t")
theme_override_colors/font_placeholder_color = Color(0.0627451, 0.0627451, 0.0627451, 0.490196)
theme_override_colors/font_readonly_color = Color(0.105882, 0.105882, 0.105882, 1)
theme_override_colors/font_color = Color(0.105882, 0.105882, 0.105882, 1)
theme_override_colors/selection_color = Color(0, 0.470588, 0.831373, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_w7fei")
theme_override_styles/normal = SubResource("StyleBoxFlat_u3444")
theme_override_styles/focus = SubResource("StyleBoxFlat_u3444")
theme_override_styles/read_only = SubResource("StyleBoxFlat_u3444")
context_menu_enabled = false
deselect_on_focus_loss_enabled = false
wrap_mode = 1
caret_blink = true

[node name="ThemePainter" parent="HBoxContainer/VBoxContainer/HBoxContainer2/TextEdit" instance=ExtResource("2_jepj1")]

[node name="Perview" type="PanelContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_r8i76")

[node name="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer2/Perview" instance=ExtResource("11_ov7oj")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -23
theme_override_constants/margin_bottom = 0

[node name="ColorRect" type="PanelContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
self_modulate = Color(0.481789, 0.48179, 0.481789, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_16077")

[node name="WarningLabel" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_w7fei")
theme_override_styles/normal = SubResource("StyleBoxFlat_6nhk7")
text = "SECURE_TEXT_EDIT_REPORT1"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SensitiveWordBar" type="PanelContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer" groups=["local_theme-normal"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bblfe")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/SensitiveWordBar"]
layout_mode = 2

[node name="SensitiveWordButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/SensitiveWordBar/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.0627451, 0.0627451, 0.0627451, 1)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_w7fei")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_l4kul")
flat = true
alignment = 0
text_overrun_behavior = 3

[node name="WarningButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/SensitiveWordBar/HBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.0627451, 0.0627451, 0.0627451, 1)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 31
icon = ExtResource("3_a8ljg")
flat = true
icon_alignment = 1

[node name="SendButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
theme = SubResource("Theme_ggvk4")
text = "SEND_NAME"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="PanelContainer" parent="HBoxContainer/MarginContainer" instance=ExtResource("4_ibb78")]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("5_gdh5t")

[node name="SensitiveWordTagContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_d0tfw")
}

[connection signal="pressed" from="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/BoldButton" to="." method="_on_bold_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/UnderlineButton" to="." method="_on_underline_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/FontSizeButton" to="." method="_on_font_size_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/FontColorButton" to="." method="_on_font_color_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/AlignRightButton" to="." method="_on_align_right_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/AlignCenterButton" to="." method="_on_align_center_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/AlignLeftButton" to="." method="_on_align_left_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ToolsBar/MarginContainer/HBoxContainer/CodeButton" to="." method="_on_code_button_pressed"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/HBoxContainer2/TextEdit" to="." method="_on_gui_input"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/HBoxContainer2/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MarginContainer/ColorRect" to="." method="_on_gui_input"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/SensitiveWordBar/HBoxContainer/SensitiveWordButton" to="." method="_on_sensitive_word_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/SensitiveWordBar/HBoxContainer/WarningButton" to="." method="_on_warning_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
